# RTIOW

./: CMakeLists.txt
src/: Application.cpp  Application.h  IRayTraceable.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  main.cpp
src/Core/: Ray.cpp  Ray.h
src/Image/: IImageWriter.h  Image.cpp  Image.h  PpmWriter.cpp  PpmWriter.h
